<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">day33</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="day33_b1">缩放图片加载</string>
    <string name="day33_b2">创建图片副本</string>
    <string name="day33_b3">简单特效</string>
    <string name="day33_b4">画画板</string>
    <string name="day33_b5">撕衣服</string>
    <string name="day33_b6">音乐播放</string>
    <string name="day33_b7">Surface视频播放</string>
    <string name="day33_b8">Video视频播放</string>
    <string name="day33_b9">拍照和摄像</string>
    <string name="b1_load">加载大图片</string>
    <string name="b6_play">开始播放</string>
    <string name="b6_continueplay">继续播放</string>
    <string name="b6_pause">暂停播放</string>
	<string name="b6_exit">退出播放</string>
    
</resources>